--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
-* timeout for database connect / query
+* clean up code
+* timeout for database connect / query / data receiving
+* support multiple statements query / response
+* implement efficent db connection pool (hard...need more thinkings)
 
