--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Name
     drizzle-nginx-module - an upstream module that talks to
-        mysql, drizzle, and sqlite by libdrizzle
+        mysql, drizzle, and sqlite3 by libdrizzle
 
 Description
     This is an nginx module integrating libdrizzle
