--- a/README
+++ b/README
@@ -50,6 +50,19 @@ Output
     that will be shared among the various nginx database
     driver modules like ngx_postgresql and ngx_oracle.
 
+    For the HTTP response header part, the 200 OK status
+    code should always be returned.
+
+    The X-DBD special header should be set to the database
+    driver that generates this output. For instance, this
+    module adds the following output header:
+
+        X-DBD: drizzle 0.03
+
+    where 0.03 is this module's own version number.
+
+    Below is the HTTP response body part:
+
     Header part
         uint32_t       format version
                        (v1.2.3 is represented as 1002003 in
