now ngx_drizzle emits the "X-Resty-DBD-Module: ngx_drizzle 0.0.1" header in the response by default and you can use the new directive "drizzle_module_header off" to disable it.

--- a/README
+++ b/README
@@ -123,7 +123,7 @@ Output
     X-Resty-DBD header. For instance, this
     module adds the following output header:
 
-        X-Resty-DBD: drizzle 0.0.1
+        X-Resty-DBD-Module: drizzle 0.0.1
 
     where 0.0.1 is this module's own version number.
 
