--- a/README
+++ b/README
@@ -240,7 +240,7 @@ TODO
         as an alternative approach to the simple round-robin.
     *   implement weighted round-robin algorithm for the
         upstream server clusters.
-    *   add the "max_idel_time" option to the "drizzle_server"
+    *   add the "max_idle_time" option to the "drizzle_server"
         directive, so that the connection pool will automatically
         release idle connections for the timeout you specify.
     *   add the "min" option to the "drizzle_server" directive
