--- a/README
+++ b/README
@@ -304,11 +304,11 @@ TODO
         also be an option ("strict=no") to disable such checks.
 
 Known Issues
-    *   When mysql's packets are splitted to 1 ~ 6 bytes long,
-        the state machine in libdrizzle may go wrong. This is
-        very likely a bug in libdrizzle. When this happens,
-        ngx_drizzle will throw out the 502 error page
-        immediately and put an error message in your error.log.
+    *   When mysql's packets are splitted to 1 ~ 4, 6 and etc.
+        bytes long, the state machine in libdrizzle may go
+        wrong. This is very likely a bug in libdrizzle. When
+        this happens, ngx_drizzle will throw out the 502 error
+        page immediately and put an error message in your error.log.
 
 Authors
     chaoslawful (王晓哲)
